--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@turf/turf": "^7.2.0",
     "@types/leaflet": "^1.9.16",
     "antd": "^5.24.3",
     "leaflet": "^1.9.4",
