--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@turf/turf": "^7.2.0",
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.16",
     "antd": "^5.24.3",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "ts-jest": "^29.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
