--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
@@ -15,6 +16,7 @@
     "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.16",
     "antd": "^5.24.3",
+    "jest": "^29.7.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
